...
    final isList = _selectedFormat == EntryFormat.list;
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.existingEntry != null
            ? (_isPastEntry
                ? (isZh ? '查看记录' : 'View Memory')
                : (isZh ? '编辑记录' : 'Edit Memory'))
            : (isZh ? '添加记录' : 'Add Memory')),
        actions: [
          if (!_isPastEntry)
            IconButton(
              icon: const Icon(Icons.check, size: 28),
              onPressed: _saveEntry,
              tooltip: 'Save',
...
          ],
        ),
      ),
    );
  }

  List<Widget> _buildNoteMode(BuildContext context, bool isZh) {
    return [
      TextField(
        controller: _textController,
        readOnly: _isPastEntry,
        maxLines: 6,
        decoration: InputDecoration(
...
